<resources>
    <string name="app_name">Ewingta Logistics</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact us</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user">New User</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="valid_mobile_number">Enter valid mobile number</string>
    <string name="valid_password">Enter valid password</string>
    <string name="read_sms_rationale">This app needs to read SMS for verifying OTP automatically.</string>
    <string name="otp_verification">OTP verification</string>
    <string name="enter_valid_email">Enter valid Email</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="error_message">Something went wrong please try again!</string>
    <string name="otp_sent_to_registered_number">OTP sent to registered number</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_profile">Profile</string>
    <string name="payment">Payment</string>
    <string name="address">Address</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="logout_warning">Logout from Ewingta Logistics</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_orders_available">No orders available</string>
    <string name="start">Start</string>
    <string name="google_maps_key">AIzaSyBvdlzVXsfuIDSoASRb3_usn4nXcRvlZMk</string>
    <string name="storage_location">This app require to access your location to know your address.</string>
    <string name="update_address">Update Address</string>
    <string name="add_address">Add Address</string>
    <string name="short_name">Short Name</string>
    <string name="gps_not_supported">GPS not supported</string>
    <string name="gps_not_enabled">GPS not enabled</string>
    <string name="short_name_empty">Please enter Short Name</string>
    <string name="address_empty">Please enter Address</string>
    <string name="address_added">Address added successfully</string>
    <string name="my_address">My Address</string>
    <string name="enter_valid_otp">Enter valid OTP</string>
    <string name="add_order">Add Order</string>
    <string name="pick_up_details">Pickup Details</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="location">Location</string>
    <string name="drop_details">Drop Details</string>
    <string name="submit">submit</string>
    <string name="what_do_you_want_to_deliver">What do you want to deliver</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="select_time">Select Time</string>
    <string name="ok">OK</string>
    <string name="press_again_warn">Press again to exit Ewingta</string>
    <string name="select_city">Select City</string>
    <string name="select_area">Select Area</string>
    <string name="no_address_found">No address found</string>
    <string name="select_address">Select Address</string>
    <string name="select_what_do_you_want_to_deliver">Select what do you want to deliver</string>
    <string name="select_delivery_type">Select Delivery Type</string>
    <string name="select_delivery_city">Select Delivery City</string>
    <string name="select_delivery_area">Select Delivery Area</string>
    <string name="select_date_time"><![CDATA[Select Date & Time]]></string>
    <string name="pick_up_location_empty">Please enter pickup location</string>
    <string name="pick_up_name_empty">Please enter pickup name</string>
    <string name="enter_valid_pick_up_mobile_number">Enter valid pickup mobile number</string>
    <string name="drop_location_empty">Please enter drop location</string>
    <string name="drop_name_empty">Please enter drop name</string>
    <string name="enter_valid_drop_mobile_number">Enter valid drop mobile number</string>
    <string name="order_placed">Order placed successfully</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Confirm Password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="new_password_is_short">New password is too short</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="confirm_password_is_short">Confirm password is too short</string>
    <string name="password_are_not_equal">Password are not equal</string>
    <string name="password_updated">Password updated successfully</string>
    <string name="no_price_available">NO prices available</string>
    <string name="select_price">Select price</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="price">Total Price</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="i_agree_to_the_insurance_terms">I agree to the insurance terms</string>
    <string name="confirm">Confirm</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="invite_text">Ewingta Logistics is designed to bring a revolution in the Delivery Industry. At Ewingta Logistics, we aim to provide the fastest Intra-city delivery with affordable prices https://play.google.com/store/apps/details?id=ewingta.domesticlogistic</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="order_details">Order Details</string>
    <string name="order_type">Order Type</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_number">Customer Number</string>
    <string name="pick_up">Pickup Add</string>
    <string name="delivery">Delivery Add</string>
    <string name="order_size">Order Size</string>
    <string name="completed">Completed</string>
    <string name="direction_not_found">Direction not found!</string>
    <string name="search">Search...</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="phone_number">9704770701</string>
    <string name="email_address">info@ewingtalogistics.com</string>
    <string name="_continue">Continue</string>
    <string name="loading">Loading...</string>
    <string name="google">Google</string>
    <string name="value">Value</string>
    <string name="dimensions">Dimension</string>
    <string name="save">Save</string>
    <string name="Continue">Continue</string>
    <string name="playservice_error">Update your playservices</string>
    <string name="enter_valid_phone">Enter valid phone number</string>
    <string name="weight">Weight</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_number">Driver Number</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="status">Status</string>
    <string name="track">Track Your Package---></string>
    <string name="address_deleted_successfully">Address deleted successfully</string>
    <string name="delete_address">Delete Address?</string>
    <string name="order_price">Price</string>
    <string name="orderstatus">Status</string>
    <string name="view_details">View Details</string>
    <string name="call">CALL</string>
    <string name="calculate">Calculate</string>
    <string name="select_weight">Select weight</string>
    <string name="base_price">Price</string>
    <string name="extra_charges">Extra Charges</string>
    <string name="gst">GST(18%)</string>
    <string name="select_the_weight">Select Weight</string>
    <string name="invoice">Invoice</string>
    <string name="payment_type">Payment Type</string>
    <string name="netbanking">Netbanking(comming Soon)</string>

</resources>
