<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_user"
        android:visible="false"
        android:title="@string/profile" />

    <item
        android:id="@+id/action_payment"
        android:icon="@drawable/ic_payment"
        android:title="@string/payment" />

    <item
        android:id="@+id/action_address"
        android:icon="@drawable/ic_location"
        android:title="@string/my_address" />

    <item
        android:id="@+id/action_add_address"
        android:icon="@drawable/ic_add_location"
        android:title="@string/add_address" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />

    <item
        android:id="@+id/action_contact_us"
        android:icon="@drawable/ic_support"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

    <item
        android:id="@+id/action_facebook"
        android:icon="@drawable/ic_facebook"
        android:title="@string/facebook" />

    <item
        android:id="@+id/action_twitter"
        android:icon="@drawable/ic_twitter"
        android:title="@string/twitter" />

    <item
        android:id="@+id/action_instagram"
        android:icon="@drawable/ic_instagram"
        android:title="@string/instagram" />
</menu>
