<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="@dimen/margin16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="80dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_rectangle_white"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLines="1"
            android:padding="@dimen/margin8dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:text="@string/mobile_number"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_rectangle_white"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/margin8dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_rectangle_white"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLines="1"
            android:padding="@dimen/margin8dp"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin16dp"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin16dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:text="@string/new_password"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_rectangle_white"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:inputType="textPassword"
            android:maxLength="6"
            android:maxLines="1"
            android:padding="@dimen/margin4dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:text="@string/retype_password"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_rectangle_white"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:inputType="textPassword"
            android:maxLength="6"
            android:maxLines="1"
            android:padding="@dimen/margin4dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/margin16dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_rectangle_yellow"
            android:text="@string/submit"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progress_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>