<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:padding="@dimen/margin16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm_order"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|start"
                android:text="@string/price"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_rectangle_white"
                android:ellipsize="end"
                android:gravity="center_vertical|start"
                android:maxLines="1"
                android:padding="@dimen/margin8dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|start"
                android:text="@string/value"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_rectangle_white"
                android:paddingBottom="@dimen/margin4dp"
                android:paddingTop="@dimen/margin4dp">

                <Spinner
                    android:id="@+id/spinner_values"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|start"
                android:text="@string/dimensions"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_rectangle_white"
                android:paddingBottom="@dimen/margin4dp"
                android:paddingTop="@dimen/margin4dp">

                <Spinner
                    android:id="@+id/spinner_dimensions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|start"
                android:text="@string/weight"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_rectangle_white"
                android:paddingBottom="@dimen/margin4dp"
                android:paddingTop="@dimen/margin4dp">

                <Spinner
                    android:id="@+id/spinner_weights"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin8dp"
            android:checked="true"
            android:clickable="false"
            android:text="@string/i_agree_to_the_terms_and_conditions"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin8dp"
            android:checked="true"
            android:clickable="false"
            android:text="@string/i_agree_to_the_insurance_terms"
            android:textColor="@android:color/white" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="@dimen/margin16dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_rectangle_yellow"
                android:paddingLeft="@dimen/margin16dp"
                android:paddingRight="@dimen/margin16dp"
                android:text="@string/confirm"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progress_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/black"
        tools:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</RelativeLayout>
